style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}
.nav {
    display: flex;
    background-color: black;
    justify-content: space-evenly;
    align-items: center;
}
.nav-title {
    color:white;
    margin-left: 50px;
}
.nav-links {
    display: flex;
    color: white;
    align-items: center;
    justify-content: space-around;
    width: 500px;
}
.nav-links > li > a {
    color: white;
    text-decoration: none;
    font-size: 20px;
}
li {
    list-style: none;
}
button {
    background-color: darkcyan;
    color:white;
}
.container{
    /* boxes not centered with page and education boxes lines not spaced apart */
    display: flex;
    /* width: 800px; */
}
.topleft, .bottomleft, .topright, .bottomright {
    border: 1px solid grey;
}
.topleft > .top {
    width: 500px;
    height: 100px;
    background-color: aqua;
}
.topleft > .bottom {
    width: 500px;
    height: 300px;
    background-color: white;
}
.topleft > .bottom > .bottom-contents {
    padding: 45px 20px;
    font-size: 20px;
}
.bottomleft, .bottomright {
    position: relative;
    top: 100px;
}
.bottomleft > .top {
    width: 500px;
    height: 50px;
    background-color: darkslategray;
    font-size: 24px;
    color: white;
    display: flex;
    align-items: center;
}
.bottomleft > .top > label {
    padding: 0px 20px;
}
.bottomleft > .bottom {
    width: 500px;
    height: 200px;
    background-color: white;
}
.bottomleft > .bottom > .bottom-contents {
    padding: 10px 20px;
}
.bottomleft > .bottom > .bottom-contents > label {
    color: grey;
}
.topright > .top, .bottomright > .top {
    width: 300px;
    height: 75px;
    background-color: darkslategray;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    font-size: 24px;
}
.topright > .top > label,  .bottomright > .top > label {
    color: white;
}
.topright > .top > p {
    border-radius: 50%;
    width: 30px;
    background-color: grey;
    text-align: center;
}
.bottomright > .top > p {
    border-radius: 50%;
    width: 65px;
    background-color: grey;
    text-align: center;
}
.topright > .bottom {
    width: 300px;
    height: 200px;
    background-color: white;
}
.topright > .bottom > .bottom-contents {
    padding: 10px 20px;
    font-size: 24px;
}
.row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
}
.topleft, .topright {
    position: relative;
    top: 50px;
}
.bottomright > .bottom {
    width: 300px;
    height: 300px;
    background-color: white;
}
.bottomright > .bottom > .bottom-contents {
    padding: 10px 20px;
    font-size: 24px;
}
.row > img, .row2 > img, .buttons > img {
    height: 45px;
    width: 45px;
}
#icon {
    width: 100px;
    height: 100px;
    position: relative;
    top: 50px;
    left: 20px;
}
#loc, #gear {
    height: 20px;
    padding-right: 5px;
}
.bottom-contents > a, .location {
    display: flex;
    align-items: center;
    padding: 10px 0px;
}
.bottom2 {
    display: flex;
    align-items: center;
    text-align: center;
    font-size: 18px;
    border-top: 1px solid grey;
    padding: 5px 20px;
}
.col1 {
    position: relative;
    left: 50px;
}
.col2 {
    position: relative;
    left: 100px;
}

